# HPC_Project

./: CMakeLists.txt
CudaRayTracer/: .gitignore  CMakeLists.txt  cuRaytracer-base.cu  cuRaytracer-shared.cu  readme.md
CudaRayTracer/include/: allocator.h  camera.h  color.h  deviceHelpers.cuh  hdrloader.h  helpers.h  hitRecord.h  hypatia.h  material.h  outfile.h  ray.h  sphere.h  texture.h  util.h
CudaRayTracer/project_desc/: raytracing.md
CudaRayTracer/sources/: allocator.c  camera.c  color.c  deviceHelpers.cu  helpers.c  hitRecord.c  loadhdr.cpp  material.c  outfile.c  ray.c  sphere.c  texture.c
CudaRayTracer/sources/device_wrappers/: allocator_wrapper.cu  camera_wrapper.cu  color_wrapper.cu  material_wrapper.cu  ray_wrapper.cu  sphere_wrapper.cu  util.cu  vec_wrapper.cu
FederateLearn/: .gitignore  CMakeLists.txt  download_data.py  readme.md  requirements.txt
FederateLearn/cluster/: download_data.py  eval  federated_kmeans  run.sh
FederateLearn/include/: dataloader.hpp  kmeans.hpp  mpi_helpers.hpp
FederateLearn/src/: dataloader.cpp  eval.cpp  kmeans.cpp  main.cpp  mpi_helpers.cpp
FederateLearn/tests/: kmeans_sanity.cpp
RayTracer/: .gitignore  CMakeLists.txt  convert_ppm.py  cuRaytracer-base.cu  cuRaytracer-improved.cu  cuRaytracer-shared.cu  main.c  requirements.txt
RayTracer/include/: camera.h  color.h  deviceHelpers.cuh  helpers.h  hypatia.h  platform_alloc.h
RayTracer/sources/: allocator.c  camera.c  deviceHelpers.cu  helpers.c
Report/: main.tex  problem1.aux  problem2.aux  question1.aux  question1.tex  question2.aux  question2.tex  references.bib  refs.bib  template.aux  template.bbl  template.bcf  template.fdb_latexmk  template.fls  template.out  template.run.xml  template.tex
craytracer/: main.c  makefile  raytracer
